@@ -55,7 +55,8 @@
     "foreach": "2.0.5",
     "inherits": "2.0.1",
     "load-script": "1.0.0",
-    "semver": "4.3.2"
+    "semver": "4.3.2",
+    "util-deprecate": "1.0.1"
   },
   "devDependencies": {
     "angular": "1.3.14",
